RbA Build/src/objects/Assigned_Resources__c.object
<CustomObject>
    <description>Resources Assigned to RbA Work Orders</description>
    <fields>
        <fullName>Scheduled_Resource__c</fullName>
        <inlineHelpText>Resource Scheduled on the Work Order</inlineHelpText>
        <label>Scheduled Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Scheduled Resources</relationshipLabel>
        <relationshipName>Scheduled_Resources</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Work_Order_Type__c</fullName>
        <formula>TEXT(Work_Order__r.Work_Order_Type__c)</formula>
        <label>Work Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <inlineHelpText>Assigned Work Order</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>RbA_Work_Order__c</referenceTo>
        <relationshipLabel>Assigned Resources</relationshipLabel>
        <relationshipName>Assigned_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPrimary</label>
        <type>Checkbox</type>
    </fields>
    <label>Assigned Resource</label>
    <nameField>
        <displayFormat>AR#-{00}</displayFormat>
        <label>Assigned Resources #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>